0.6 (naprawiłem część rzeczy typu zbroije (wszystkie))